--- a/Ai.html
+++ b/Ai.html
@@ -401,7 +401,7 @@
                     <li><a href="courses_level_3.html">Level 3</a></li>
                 </ul>
             </li>
-            <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="Materialx.html"><i class="fas fa-home"></i> Home</a></li>
         </ul>
     </nav>
 
