--- a/Materialx.html
+++ b/Materialx.html
@@ -556,7 +556,7 @@
             </li>
             <li><a href="news.html"><i class="fas fa-newspaper"></i> News</a></li>
             <li><a href="#section-title"><i class="fas fa-book"></i> Courses</a></li>
-            <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="Materialx.html"><i class="fas fa-home"></i> Home</a></li>
         </ul>
 
 
