--- a/Ai.html
+++ b/Ai.html
@@ -391,6 +391,7 @@
             <li><a href="quiz.html" target="_blank"><i class="fas fa-question-circle"></i> Quizzes</a></li>
             <li><a href="draw.html"><i class="fas fa-pencil-alt"></i> Draw Notes</a></li>
             <li><a href="Learning_Progress.html" target="_blank"><i class="fas fa-book-open"></i> Learning Progress</a>
+                <li><a href="chat.html"><i class="fas fa-robot"></i> Chatbot</a></li>
             </li>
             <li><a href="news.html"><i class="fas fa-newspaper"></i> News</a></li>
             <li>
