--- a/Materialx.html
+++ b/Materialx.html
@@ -555,7 +555,7 @@
             <li><a href="Learning_Progress.html" target="_blank"><i class="fas fa-book-open"></i> Learning Progress</a>
             </li>
             <li><a href="news.html"><i class="fas fa-newspaper"></i> News</a></li>
-            <li><a href="#section-title"><i class="fas fa-book"></i> Courses</a></li>
+            <li><a href="chat.html"><i class="fas fa-robot"></i> Chatbot</a></li>
             <li><a href="Materialx.html"><i class="fas fa-home"></i> Home</a></li>
         </ul>
 
