--- a/chat.html
+++ b/chat.html
@@ -146,6 +146,9 @@
                 padding: 1vh;
             }
         }
+        #chat-box {
+        padding-bottom: 60px; 
+    }
     </style>
 </head>
 
