--- a/news.html
+++ b/news.html
@@ -282,7 +282,7 @@
     <nav>
         <div class="hamburger" onclick="toggleMenu()">&#9776;</div>
         <ul id="nav-menu">
-            <li><a href="time.html" target="_blank"><i class="fas fa-clock"></i> Time</a></li>
+            <li><a href="Entertainment.html" target="_blank"><i class="fas fa-gamepad"></i> Fun</a></li>
             <li><a href="quiz.html" target="_blank"><i class="fas fa-question-circle"></i> Quizzes</a></li>
             <li><a href="draw.html"><i class="fas fa-pencil-alt"></i> Draw Notes</a></li>
             <li><a href="Learning_Progress.html" target="_blank"><i class="fas fa-book-open"></i> Learning Progress</a>
