--- a/chat.html
+++ b/chat.html
@@ -8,155 +8,186 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" type="image/png" href="img/photo_2024-10-01_00-48-56.jpg">
     <style>
-       body {
-    font-family: Arial, sans-serif;
-    direction: rtl;
-    text-align: right;
-    background-color: #e5ddd5;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    overflow: hidden;
-}
+        body {
+            font-family: Arial, sans-serif;
+            direction: rtl;
+            text-align: right;
+            background-color: #e5ddd5;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
+            overflow: hidden;
+        }
 
-.chatbot-container {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    width: 100%;
-    background-color: #e5ddd5;
-    background-image: url('your-image-url.jpg');
-    background-size: cover;
-    background-position: center;
-}
+        .chatbot-container {
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+            width: 100%;
+            background-color: #e5ddd5;
+            background-image: url('your-image-url.jpg');
+            background-size: cover;
+            background-position: center;
+        }
 
-#chat-box {
-    flex: 1;
-    overflow-y: auto;
-    padding: 15px;
-    background-color: rgba(236, 229, 221, 0.9);
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    border-radius: 10px;
-    padding-bottom: 60px; /* لضمان أن شريط الإدخال لا يغطي الرسائل */
-}
+        #chat-box {
+            flex: 1;
+            overflow-y: auto;
+            padding: 15px;
+            background-color: rgba(236, 229, 221, 0.9);
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            border-radius: 10px;
+            padding-bottom: 60px;
+        }
 
-.chat-message {
-    max-width: 75%;
-    padding: 12px 15px;
-    border-radius: 18px;
-    font-size: 1rem;
-    line-height: 1.6;
-    margin: 5px 0;
-}
+        .chat-message {
+            max-width: 75%;
+            padding: 12px 15px;
+            border-radius: 18px;
+            font-size: 1rem;
+            line-height: 1.6;
+            margin: 5px 0;
+        }
 
-.bot-message {
-    background-color: #ffffff;
-    align-self: flex-start;
-    border-radius: 18px 18px 18px 0;
-    color: #333;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.15);
-}
+        .bot-message {
+            background-color: #ffffff;
+            align-self: flex-start;
+            border-radius: 18px 18px 18px 0;
+            color: #333;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.15);
+        }
 
-.user-message {
-    background-color: #dcf8c6;
-    align-self: flex-end;
-    border-radius: 18px 18px 0 18px;
-    color: #000;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.15);
-}
+        .user-message {
+            background-color: #dcf8c6;
+            align-self: flex-end;
+            border-radius: 18px 18px 0 18px;
+            color: #000;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.15);
+        }
 
-.input-area {
-    display: flex;
-    padding: 10px;
-    background-color: #ffffff;
-    border-top: 1px solid #ddd;
-    align-items: center;
-    gap: 10px;
-    position: fixed;  /* تثبيت شريط الإدخال في الأسفل */
-    bottom: 0;        /* التثبيت في الأسفل */
-    left: 0;
-    right: 0;
-    z-index: 1000;   /* التأكد من أن شريط الإدخال فوق العناصر الأخرى */
-}
+        .input-area {
+            display: flex;
+            padding: 10px;
+            background-color: #ffffff;
+            border-top: 1px solid #ddd;
+            align-items: center;
+            gap: 10px;
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            z-index: 1000;
+        }
 
-input[type="text"] {
-    flex: 1;
-    padding: 12px;
-    border-radius: 20px;
-    border: 1px solid #ccc;
-    outline: none;
-    box-sizing: border-box;
-    font-size: 1.1rem;
-}
+        input[type="text"] {
+            flex: 1;
+            padding: 12px;
+            border-radius: 20px;
+            border: 1px solid #ccc;
+            outline: none;
+            box-sizing: border-box;
+            font-size: 1.1rem;
+        }
 
-input[type="text"]:focus {
-    border-color: #4CAF50;
-}
+        input[type="text"]:focus {
+            border-color: #4CAF50;
+        }
 
-button {
-    padding: 12px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 50%;
-    cursor: pointer;
-    font-size: 1.2rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
-}
+        button {
+            padding: 12px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 50%;
+            cursor: pointer;
+            font-size: 1.2rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+        }
 
-button:hover {
-    background-color: #45a049;
-}
+        button:hover {
+            background-color: #45a049;
+        }
 
-.options {
-    margin-top: 10px;
-    background-color: #fff;
-    border-radius: 8px;
-    padding: 10px;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.15);
-}
+        .options {
+            margin-top: 10px;
+            background-color: #fff;
+            border-radius: 8px;
+            padding: 10px;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.15);
+        }
 
-.option {
-    padding: 8px 12px;
-    border-radius: 5px;
-    cursor: pointer;
-    background-color: #f2f2f2;
-    margin: 5px 0;
-}
+        .option {
+            padding: 8px 12px;
+            border-radius: 5px;
+            cursor: pointer;
+            background-color: #f2f2f2;
+            margin: 5px 0;
+        }
 
-.option:hover {
-    background-color: #e0e0e0;
-}
+        .option:hover {
+            background-color: #e0e0e0;
+        }
 
-@media (max-width: 600px) {
-    .chat-message {
-        font-size: 0.9rem;
-    }
+        @media (max-width: 600px) {
+            .chat-message {
+                font-size: 0.9rem;
+            }
 
-    input[type="text"] {
-        font-size: 1rem;
-    }
+            input[type="text"] {
+                font-size: 1rem;
+            }
 
-    button {
-        font-size: 1.1rem;
-    }
+            button {
+                font-size: 1.1rem;
+            }
 
-    .input-area {
-        padding: 1vh;
-    }
+            .input-area {
+                padding: 1vh;
+            }
 
-    #chat-box {
-        padding-bottom: 80px;
-    }
-}
+            #chat-box {
+                padding-bottom: 80px;
+            }
+        }
 
+        @media (min-width: 601px) {
+            .chat-message {
+                font-size: 1rem;
+            }
+
+            input[type="text"] {
+                font-size: 1.1rem;
+            }
+
+            button {
+                font-size: 1.2rem;
+            }
+
+            .input-area {
+                padding: 10px;
+            }
+
+            #chat-box {
+                padding-bottom: 60px;
+            }
+        }
+
+        @media (min-width: 768px) {
+            .chat-message {
+                max-width: 60%;
+            }
+
+            input[type="text"] {
+                padding: 10px;
+            }
+        }
     </style>
 </head>
 
