--- a/Materialx.html
+++ b/Materialx.html
@@ -550,7 +550,7 @@
         <ul id="nav-menu">
             <li><a href="Entertainment.html" target="_blank"><i class="fas fa-gamepad"></i> Fun</a></li>
             <li><a href="quiz.html" target="_blank"><i class="fas fa-question-circle"></i> Quizzes</a></li>
-            <li><a href="code.html" target="_blank"><i class="fas fa-code"></i> Coding (Demo)</a></li>
+            <li><a href="code.html" target="_blank"><i class="fas fa-code"></i> Coding </a></li>
             <li><a href="draw.html"><i class="fas fa-pencil-alt"></i> Draw Notes</a></li>
             <li><a href="Learning_Progress.html" target="_blank"><i class="fas fa-book-open"></i> Learning Progress</a>
             </li>
