--- a/it.html
+++ b/it.html
@@ -109,7 +109,7 @@
     <div id="hero">
       <h1>Coming soon........</h1>
 
-      <a id="home-link" class="meta-link" href="index.html">
+      <a id="home-link" class="meta-link" href="Materialx.html">
         <i class="fas fa-home"></i>
         <span class="roboto-mono">Home</span>
       </a>
