--- a/quiz.html
+++ b/quiz.html
@@ -19,7 +19,8 @@
         }
 
         .quiz-container {
-            background-color: #333333;
+            background-color: #000000;
+            color: #ffffff;
             padding: 40px;
             border-radius: 12px;
             box-shadow: 0 6px 25px rgba(0, 0, 0, 0.1);
@@ -30,13 +31,15 @@
             overflow: hidden;
         }
 
-        .quiz-container:hover {
-            transform: scale(1.03);
+
+        .question {
+            margin-bottom: 20px;
+            color: #ffffff;
         }
 
         h1 {
             font-size: 26px;
-            color: #a3a3a3;
+            color: #cccccc;
             margin-bottom: 25px;
         }
 
