--- a/Entertainment.html
+++ b/Entertainment.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Entertainment - valorant</title>
-    <link rel="icon" type="image/png" href="img/photo_2024-10-01_00-48-56.jpg">
+    <title>Materialx | Entertainment</title>
+    <link rel="icon" type="image/png" href="img/photo_2024-11-16_17-45-40.jpg">
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css'>
     <link rel='stylesheet' href='https://db.onlinewebfonts.com/c/b2437a24f47a94383eb02858f8a4df97?family=Insomnia'>
     <link rel='stylesheet' href='https://db.onlinewebfonts.com/c/e7322a6673613ab13604fadda3d20e56?family=VALORANT'>
@@ -4246,9 +4246,13 @@
                 </div>
                 <div class="header-menu">
                     <ul>
-                        <li class="cursor-scale"><a href="Materialx.html">Home</a></li>
-                        <li class="cursor-scale"><a href="time.html">Time</a></li>
-                        <li class="cursor-scale"><a href="">soter</a></li>
+                        <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+                        <li class="cursor-scale"><a href="anime.html">Anime</a></li>
+                        <li class="cursor-scale"><a href="Animals.html">Animals</a></li>
+                        <li class="cursor-scale"><a href="fortnite.html">Fortnite</a></li>
+                        <li class="cursor-scale"><a href="sun.html">The Sun</a></li>
+                        <li class="cursor-scale"><a href="tr.html">The Train</a></li>
+                        <li class="cursor-scale"><a href="relax.html">Rain</a></li>
                     </ul>
                 </div>
                 <div class="header-right-icon">
