--- a/code.html
+++ b/code.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Programming Practice </title>
-    <link rel="icon" type="image/png" href="img/photo_2024-10-01_00-48-56.jpg">
+    <title>Materialx | Programming Practice </title>
+    <link rel="icon" type="image/png" href="img/photo_2024-11-16_17-45-40.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.0/codemirror.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.0/codemirror.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.0/mode/python/python.min.js"></script>
