--- a/draw.html
+++ b/draw.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Materialx | Drawing</title>    <link rel="icon" type="image/png" href="img/photo_2024-10-01_00-48-56.jpg">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Materialx | Drawing</title>   
+    <link rel="icon" type="image/png" href="img/photo_2024-11-16_17-45-40.jpg">  
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
@@ -21,7 +22,7 @@
         align-items: center;
         justify-content: center;
         min-height: 100vh;
-        background: #0d1f22;
+        background: #000c37;
         padding: 10px;
     }
 
