--- a/quiz.html
+++ b/quiz.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Quizzes</title>
-    <link rel="icon" type="image/png" href="img/photo_2024-10-01_00-48-56.jpg">
+    <title>Materialx | Quizzes</title>
+    <link rel="icon" type="image/png" href="img/photo_2024-11-16_17-45-40.jpg">
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #000000;
+            background-color: #040732;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -19,7 +19,7 @@
         }
 
         .quiz-container {
-            background-color: #000000;
+            background-color: #050538;
             color: #ffffff;
             padding: 40px;
             border-radius: 12px;
@@ -345,7 +345,7 @@
         }
 
         body.dark-mode {
-            background-color: #f1f3f5;
+            background-color: #9e9e9e;
             color: #fff;
         }
     </style>
