--- a/relax.html
+++ b/relax.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Materialx | Coming soon</title>
-    <link rel="icon" type="image/png" href="img/photo_2024-10-01_00-48-56.jpg"></head>
-<style>
+    <title>Materialx | window</title>
+    <link rel="icon" type="image/png" href="img/photo_2024-11-16_17-45-40.jpg"><style>
     body {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #000000;
+    background-color:rgb(4, 12, 53);
   }
   
   .window {
