--- a/time.html
+++ b/time.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Materialx | clock</title>
-        <link rel="icon" type="image/png" href="img/photo_2024-10-01_00-48-56.jpg">
-</head>
+    <link rel="icon" type="image/png" href="img/photo_2024-11-16_17-45-40.jpg"></head>
 <style>
     @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&display=swap');
 
@@ -21,7 +20,7 @@
         justify-content: center;
         align-items: center;
         min-height: 100vh;
-        background: #186762;
+        background: #071150;
         position: relative;
         padding: 10px;
     }
@@ -113,7 +112,7 @@
         top: 10px;
         right: 10px;
         padding: 10px 20px;
-        background-color: #ff5722;
+        background-color: #577fdb;
         color: white;
         border: none;
         cursor: pointer;
@@ -185,7 +184,7 @@
     }
 
     #close-btn {
-        background: #ff5722;
+        background: #0a3bb7;
         color: white;
         border: none;
         padding: 5px 10px;
