--- a/home.html
+++ b/home.html
@@ -16,75 +16,76 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background: linear-gradient(135deg, #1c1c1c, #3a3a3a);
+            background: linear-gradient(135deg, #1c1c1c, #020a39);
             color: #ffffff;
             font-family: 'Courier New', Courier, monospace;
             overflow: hidden;
-            flex-direction: column;
             position: relative;
         }
 
         #logo {
-            display: none; 
+            display: none;
             position: absolute;
             z-index: 10;
-            width: 40vw; 
-            max-width: 400px; 
-            height: auto; 
-            animation: fadeIn 1s forwards, bounce 1s forwards;
+            width: 40vw;
+            max-width: 400px;
+            height: auto;
+            transform: translateY(100vh); 
+            animation: flyIn 2s ease-out forwards, swing 2s 2s infinite alternate;
             filter: drop-shadow(0 0 20px rgba(0, 255, 255, 0.7));
         }
 
         #text {
-            display: none; 
+            display: none;
             position: absolute;
             z-index: 10;
-            font-size: 5vw; 
+            font-size: 5vw;
             font-weight: bold;
-            top: 15%; 
-            transform: translate(-50%, -50%); 
-            animation: fadeInText 1s forwards; 
+            bottom: 10%; 
+            transform: translateY(100vh);
+            animation: textFlyIn 2s 0.5s ease-out forwards, floatText 2s 3s infinite ease-in-out;
             text-shadow: 0 0 10px rgba(0, 255, 255, 0.8), 0 0 20px rgba(0, 255, 255, 0.5);
         }
 
-        @keyframes fadeIn {
-            from { opacity: 0; transform: scale(0.5); }
-            to { opacity: 1; transform: scale(1); }
+        @keyframes flyIn {
+            0% { transform: translateY(100vh); }
+            70% { transform: translateY(-10px); }
+            100% { transform: translateY(0); }
         }
 
-        @keyframes bounce {
+        @keyframes textFlyIn {
+            0% { transform: translateY(100vh); }
+            70% { transform: translateY(-10px); }
+            100% { transform: translateY(0); }
+        }
+
+        @keyframes swing {
+            0% { transform: translateY(0) rotate(0); }
+            50% { transform: translateY(-10px) rotate(2deg); }
+            100% { transform: translateY(0) rotate(0); }
+        }
+
+        @keyframes floatText {
             0%, 100% { transform: translateY(0); }
-            50% { transform: translateY(-20px); }
-        }
-
-        @keyframes fadeInText {
-            from { opacity: 0; transform: translateY(20px); }
-            to { opacity: 1; transform: translateY(0); }
+            50% { transform: translateY(-10px); }
         }
 
         @media (max-width: 600px) {
             #text {
-                font-size: 10vw; 
-                top: 40%; 
-            }
-            #logo {
-                top: 55%; 
+                font-size: 10vw;
             }
         }
 
         @media (max-width: 400px) {
             #text {
-                font-size: 12vw; 
-            }
-            #logo {
-                top: 65%; 
+                font-size: 12vw;
             }
         }
     </style>
 </head>
 <body>
     <div id="text"></div>
-    <img id="logo" src="img/photo_2024-10-01_00-48-56.png" alt="MaterialX Logo">
+    <img id="logo" src="img/WhatsApp_Image_2024-11-16_at_11.34.png" alt="MaterialX Logo">
 
     <script>
         const textElement = document.getElementById('text');
@@ -101,7 +102,9 @@
 
         function showLogo() {
             logoElement.style.display = 'block';
-            setTimeout(showText, 500);
+            setTimeout(() => {
+                showText();
+            }, 2000);
         }
 
         function showText() {
@@ -109,13 +112,15 @@
             if (index < text.length) {
                 textElement.innerHTML += text[index];
                 index++;
-                setTimeout(showText, 200);
+                setTimeout(showText, 150); 
             } else {
-                setTimeout(function() {
-                    logoElement.style.display = 'none'; 
-                    textElement.style.display = 'none';
-                    window.location.href = 'Materialx.html';
-                }, 1000);
+                setTimeout(function () {
+                    logoElement.style.animation = "fadeOut 1s forwards";
+                    textElement.style.animation = "fadeOut 1s forwards";
+                    setTimeout(() => {
+                        window.location.href = 'index.html';
+                    }, 1000);
+                }, 2000);
             }
         }
     </script>
