--- a/Entertainment.html
+++ b/Entertainment.html
@@ -4246,7 +4246,7 @@
                 </div>
                 <div class="header-menu">
                     <ul>
-                        <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+                        <li><a href="homee.html"><i class="fas fa-home"></i> Home</a></li>
                         <li class="cursor-scale"><a href="anime.html">Anime</a></li>
                         <li class="cursor-scale"><a href="Animals.html">Animals</a></li>
                         <li class="cursor-scale"><a href="fortnite.html">Fortnite</a></li>
