--- a/Is.html
+++ b/Is.html
@@ -253,7 +253,7 @@
             <li><a href="quiz.html" target="_blank"><i class="fas fa-question-circle"></i> Quizzes</a></li>
             <li><a href="Learning_Progress.html" target="_blank"><i class="fas fa-book-open"></i> Learning Progress</a></li>
             <li><a href="chat.html"><i class="fas fa-robot"></i> Chatbot</a></li>
-            <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="homee.html"><i class="fas fa-home"></i> Home</a></li>
         </ul>
     </nav>
 
