--- a/play.html
+++ b/play.html
@@ -139,67 +139,70 @@
         }
 
         .memory-board {
-            display: grid;
-            grid-template-columns: repeat(4, 100px);
-            grid-gap: 10px;
-            margin-top: 20px;
-            justify-content: center;
-        }
-
-        .memory-card {
-            width: 100px;
-            height: 100px;
-            background-color: #38bdf8;
-            border-radius: 10px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
-            font-size: 24px;
-            color: transparent;
-            background-color: #1e293b;
-            position: relative;
-            transition: background 0.3s ease;
-        }
-
-        .memory-card.flipped {
-            color: #ffffff;
-            background-color: #0284c7;
-        }
-        .sudoku-board {
-  display: grid;
-  grid-template-columns: repeat(9, 50px);
-  grid-template-rows: repeat(9, 50px);
-  gap: 5px;
-  margin-top: 20px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
+    grid-gap: 10px;
+    margin-top: 20px;
+    justify-content: center;
+    width: 100%;
+    max-width: 500px;
 }
 
-.sudoku-cell {
-  width: 50px;
-  height: 50px;
-  text-align: center;
-  font-size: 20px;
-  background-color: #f1f5f9;
-  border: 1px solid #38bdf8;
+.memory-card {
+    width: 100%;
+    height: 100px;
+    background-color: #1e293b;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    font-size: 24px;
+    color: transparent;
+    transition: background 0.3s ease;
+    position: relative;
 }
 
-.sudoku-cell.invalid {
-  background-color: #ef4444; 
+.memory-card.flipped {
+    color: #ffffff;
+    background-color: #0284c7;
 }
 
-button {
-  margin-top: 10px;
-  padding: 10px;
-  background-color: #38bdf8;
-  color: white;
-  border: none;
-  cursor: pointer;
-  border-radius: 5px;
+.title {
+    font-size: 2rem;
+    text-align: center;
 }
 
-button:hover {
-  background-color: #0284c7;
+@media (max-width: 768px) {
+    .memory-card {
+        height: 80px;
+        font-size: 20px;
+    }
+
+    .memory-board {
+        grid-gap: 8px;
+    }
+
+    .title {
+        font-size: 1.8rem;
+    }
 }
+
+@media (max-width: 480px) {
+    .memory-card {
+        height: 60px;
+        font-size: 16px;
+    }
+
+    .memory-board {
+        grid-gap: 6px;
+    }
+
+    .title {
+        font-size: 1.5rem;
+    }
+}
+
 
     </style>
 </head>
