--- a/homee.html
+++ b/homee.html
@@ -610,11 +610,11 @@
                             <h2 style="font-size: 30px;">Departments</h2>
                         </section>
                         <div class="available-properties-grid">
-                            <a href="is.html">
+                            <a href="ISD.html">
                                 <img src="img/Is.png" alt="Property 1">
                                 <p style="font-size: 25px; color: #007BFF;">IS</p>
                             </a>
-                            <a href="ai.html">
+                            <a href="AID.html">
                                 <img src="img/AI.jpg" alt="Property 2">
                                 <p style="font-size: 25px; color: #007BFF;">AI</p>
                             </a>
